plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.1.0'
}
group = 'org.example'
version = '1.0-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    // implementation 'io.jsonwebtoken:jjwt:0.9.1'

    // Mongo
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Swagger 2 > Ref > https://springdoc.org/#swagger-ui-properties
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.0'

    // MapStruct > Mapper
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    implementation 'org.mapstruct:mapstruct-processor:1.3.1.Final'
    annotationProcessor"org.mapstruct:mapstruct-processor:1.3.1.Final"

    // GSON
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'

    // JWT Token
    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'

    // https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api
    implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'

    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.673'
    implementation group: 'commons-io', name: 'commons-io', version: '2.6'

    // implementation group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: '2.5.2'
    // implementation 'com.google.firebase:firebase-admin:9.2.0'

    // https://mvnrepository.com/artifact/org.springframework/spring-aspects
    implementation group: 'org.springframework', name: 'spring-aspects', version: '6.1.6'

    // https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44
    implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.29.0'

}

test {
    useJUnitPlatform()
}